--- a/ShoesAdmin/src/app/components/index/index.component.html
+++ b/ShoesAdmin/src/app/components/index/index.component.html
@@ -73,6 +73,9 @@
                             <li routerLinkActive="active">
                                 <a [routerLink]="['chitiet-sp']" class="menu-item">Chi tiết sp</a>
                              </li>
+                             <li routerLinkActive="active">
+                                <a [routerLink]="['chitietkhohang']" class="menu-item">Hàng trong Kho</a>
+                             </li>
                         </ul>
                     </li>
                     <!-- <li class="has-sub nav-item">
