--- a/ShoesAdmin/src/app/components/invoice/invoice.component.html
+++ b/ShoesAdmin/src/app/components/invoice/invoice.component.html
@@ -2,7 +2,7 @@
   <!--Invoice template starts-->
   <div class="row">
     <div class="col-md-12">
-      <h4>Invoice</h4>
+      <h4>Chi Tiết Hóa Đơn</h4>
     </div>
   </div>
   <section class="invoice-template">
@@ -15,22 +15,22 @@
               <img src="../assets/app-assets/img/logos/logo-big-black.png" alt="company logo" class="mb-2" width="70">
               <ul class="px-0 list-unstyled">
                 <li class="text-bold-800">Công Ty TNHH 2 Thành Viên</li>
-                <li>4128 Lê Văn Sỹ,</li>
-                <li>Phường 8,</li>
-                <li>Quận Phú Nhuận,</li>
-                <li>TP.HCM</li>
+                <li>4128 Lê Văn Sỹ,Phường 8,Quận Phú Nhuận,TP.HCM</li>
               </ul>
             </div>
             <div class="col-6 text-right">
-              <h2>HÓA ĐƠN</h2>
-              <p class="pb-3">Mã Hóa Đơn:</p>
+              <h2>THÔNG TIN HÓA ĐƠN</h2>
+              <p>
+                <span class="text-muted">Mã Hóa Đơn:</span> HD01
+              <p>
+              <!-- <p class="pb-3">Mã Hóa Đơn:</p> -->
               <ul class="px-0 list-unstyled">
                 <li>Tổng Tiền Thanh Toán: </li>
                 <li class="lead text-bold-800">$ 12,000.00</li>
               </ul>
             </div>
           </div>
-          <!--/ Invoice Company Details -->
+          <!-- Invoice Company Details -->
           <!-- Invoice Customer Details -->
           <div id="invoice-customer-details" class="row pt-2">
             <div class="col-sm-12 text-left">
@@ -40,17 +40,13 @@
               <ul class="px-0 list-unstyled">
                 <li class="text-bold-800">Tên KH</li>
                 <li>địa chỉ</li>
-                <!-- <li>Albuquerque,</li>
-                <li>New Mexico-87102.</li> -->
               </ul>
             </div>
             <div class="col-6 text-right">
               <p>
-                <span class="text-muted">Ngày lập hóa đơn :</span> 06/05/2016</p>
+                <span class="text-muted">Trạng Thái :</span> Hoàn Thành</p>
               <p>
-                <span class="text-muted">Terms :</span> Due on Receipt</p>
-              <p>
-                <span class="text-muted">Due Date :</span> 10/05/2016</p>
+                <span class="text-muted">Ngày :</span> 10/05/2016</p>
             </div>
           </div>
           <!--/ Invoice Customer Details -->
@@ -104,11 +100,11 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6 col-sm-12 text-left">
-                <p class="lead">Phương thức thanh toán:</p>
+               <div class="col-md-6 col-sm-12 text-left">
+                <!-- <p class="lead">Phương thức thanh toán:</p> -->
                 <div class="row">
                   <div class="col-12">
-                    <table class="table table-borderless table-sm">
+                    <!-- <table class="table table-borderless table-sm">
                       <tbody>
                         <tr>
                           <td>Tên ngân hàng:</td>
@@ -118,19 +114,19 @@
                           <td>Tên Khách hàng:</td>
                           <td class="text-right">Amanda Orton</td>
                         </tr>
-                        <!-- <tr>
+                         <tr>
                           <td>Ngày:</td>
                           <td class="text-right">FGS165461646546AA</td>
-                        </tr> -->
+                        </tr> \
                         <tr>
                           <td>Nội dung:</td>
                           <td class="text-right">BTNPP34</td>
                         </tr>
                       </tbody>
-                    </table>
+                    </table> -->
                   </div>
                 </div>
-              </div>
+              </div> 
               <div class="col-md-6 col-sm-12">
                 <p class="lead">Hóa đơn thanh toán</p>
                 <div class="table-responsive">
