get data + validate for checkout form

--- a/karl-shop/src/app/components/cart/cart.component.html
+++ b/karl-shop/src/app/components/cart/cart.component.html
@@ -109,7 +109,7 @@
               </span>
             </li>
           </ul>
-          <a routerLink="/home/checkout" class="btn karl-checkout-btn">Tiến hành thanh toán</a>
+          <a routerLink="/home/checkout" class="btn karl-checkout-btn" (click)="getAllProductInCart()">Tiến hành thanh toán</a>
         </div>
       </div>
 
