--- a/karl-shop/src/app/components/checkout/checkout.component.css
+++ b/karl-shop/src/app/components/checkout/checkout.component.css
@@ -1,7 +1,56 @@
 #note {
-    height: 52px;
-    border: none;
-    background-color: #f4f2f8;
-    border-radius: 0;
-    width: 100%;
+  height: 52px;
+  border: none;
+  background-color: #f4f2f8;
+  border-radius: 0;
+  width: 100%;
+}
+
+button.btnCheckout {
+  color: #fff;
+  background: #28A745;
+  padding: 10px 20px;
+  margin-left: 15px;
+}
+
+em {
+  float: right;
+  color: #E05C65;
+  padding-left: 10px;
+}
+
+.error input,
+.error select,
+.error textarea {
+  background-color: #E3C35C;
+}
+
+ul.order-details-form li:last-child {
+  border-bottom: 0;
+}
+
+.order-details-confirmation {
+  background: #e9e9e9;
+  border-radius: 15px;
+}
+
+span.title {
+  font-size: 15px;
+  color: #000;
+}
+
+.getAll {
+  background: #ccc;
+  border-radius: 5px;
+  padding: 0 5px;
+}
+
+.infoPro span {
+    color: #3A3A3A;
+    font-weight: 600;
+}
+
+.sum {
+    color: #28A745;
+    font-weight: 600;
 }
