--- a/karl-shop/src/app/components/user-login/user-login.component.html
+++ b/karl-shop/src/app/components/user-login/user-login.component.html
@@ -10,7 +10,7 @@
         <button mat-raised-button color="warn" (click)="signInWithGoogle()">Đăng nhập Google
           <i class="fab fa-google"></i>
         </button>
-        
+
       </div>
 
       <mat-form-field>
@@ -24,16 +24,18 @@
       <div class="button-row">
         <button mat-raised-button color="primary" class="btnLogin">Đăng nhập</button>
       </div>
-      <small>Quên mật khẩu ?</small>
+      <small (click)="forgotPassword()">Quên mật khẩu ?</small>
     </div>
   </mat-tab>
 
   <mat-tab label="Đăng ký">
 
-    <div class="example-container">
+    <!-- <div class="example-container">
       <mat-form-field>
-        <input matInput placeholder="Tên tài khoản">
+        <input matInput placeholder="Email" [formControl]="email" required>
+        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
+
       <mat-form-field>
         <input matInput placeholder="Mật khẩu" [type]="hide ? 'password' : 'text'">
         <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
@@ -44,11 +46,6 @@
         <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility' : 'visibility_off'}}</mat-icon>
       </mat-form-field>
 
-      <mat-form-field>
-        <input matInput placeholder="Email" [formControl]="email" required>
-        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-      </mat-form-field>
-
       <section class="example-section">
         <mat-checkbox class="example-margin">Tôi đồng ý với điều khoản và dịch vụ</mat-checkbox>
         <div class="button-row">
@@ -56,7 +53,7 @@
         </div>
         <small>Đã có tài khoản</small>
       </section>
-    </div>
+    </div> -->
 
   </mat-tab>
 </mat-tab-group>
