--- a/karl-shop/src/app/components/checkout/checkout.component.html
+++ b/karl-shop/src/app/components/checkout/checkout.component.html
@@ -112,7 +112,7 @@
 
             <li *ngIf="_productInCart!=null" class="sum">
               <span>Tổng</span>
-              <span>{{ _sumOfMoney | number:'1.0' }} đ</span>
+              <span class="price">{{ _sumOfMoney | number:'1.0' }} đ</span>
             </li>
 
           </ul>
