--- a/karl-shop/src/app/components/checkout/checkout.component.css
+++ b/karl-shop/src/app/components/checkout/checkout.component.css
@@ -30,7 +30,7 @@ ul.order-details-form li:last-child {
 }
 
 .order-details-confirmation {
-  background: #e9e9e9;
+  background: #F4F2F8;
   padding: 40px 5px;
   border-radius: 15px;
 }
@@ -43,7 +43,7 @@ span.title {
 }
 
 .getAll {
-  background: #ccc;
+  background: #fff;
   border-radius: 5px;
   padding: 0 5px;
   margin-bottom: 5px;
@@ -58,6 +58,9 @@ span.title {
     color: #28A745;
     font-weight: 600;
 }
+.sum span{
+  font-size: 18px;
+}
 .mt-50{
   margin-top: 40px;
 
@@ -70,4 +73,8 @@ span.title {
 }
 .big-title{
   width: 100%;
+}
+
+.price {
+  font-weight: 700;
 }
