--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -1,49 +1,3 @@
-<!-- <section class="welcome_area">
-  <div class="welcome_slides owl-carousel">
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup1.jpeg');">
-      <div class="container h-100">
-        <div class="row h-100 align-items-center">
-          <div class="col-12">
-            <div class="welcome_slide_text">
-              <h6 data-animation="bounceInDown" data-delay="0" data-duration="500ms">* Miễn phí ship 10/6 -12/6</h6>
-              <h2 data-animation="fadeInUp" data-delay="500ms" data-duration="500ms">Xu hướng</h2>
-              <a href="#" class="btn karl-btn" data-animation="fadeInUp" data-delay="1s" data-duration="500ms">Mua Ngay</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup1.jpeg');">
-      <div class="container h-100">
-        <div class="row h-100 align-items-center">
-          <div class="col-12">
-            <div class="welcome_slide_text">
-              <h6 data-animation="fadeInDown" data-delay="0" data-duration="500ms">* Khuyến mãi 20% tất cả mặt hàng</h6>
-              <h2 data-animation="fadeInUp" data-delay="500ms" data-duration="500ms">Bộ sưu tập mùa Hè</h2>
-              <a href="#" class="btn karl-btn" data-animation="fadeInLeftBig" data-delay="1s" data-duration="500ms">Mua Ngay</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup2.jpg');">
-      <div class="container h-100">
-        <div class="row h-100 align-items-center">
-          <div class="col-12">
-            <div class="welcome_slide_text">
-              <h6 data-animation="fadeInDown" data-delay="0" data-duration="500ms">* Bốc thăm trúng thưởng</h6>
-              <h2 data-animation="bounceInDown" data-delay="500ms" data-duration="500ms">Giày Traning</h2>
-              <a href="#" class="btn karl-btn" data-animation="fadeInRightBig" data-delay="1s" data-duration="500ms">Mua Ngay</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-
 <!-- ****** Top Catagory Area Start ****** -->
 <section class="top_catagory_area d-md-flex clearfix">
   <!-- Single Catagory -->
@@ -85,24 +39,11 @@
               <div class="col-12 col-lg-7">
                 <div class="quickview_pro_des">
                   <h4 class="title">{{_detailArray.tenSanPham}}</h4>
-                  <!-- <h5 class="price">{{_detailArray.donGia | number :'1.0'}} đ
-                  </h5> -->
                   <h4 class="product-sale">{{_detailArray.donGia * (1-_detailArray.chietKhau) | number:'1.0'}} đ</h4>
                   <p>{{_detailArray.chiTiet}}</p>
                   <a [routerLink]="['/home/detail', _detailArray.id]">Xem chi tiết</a>
                 </div>
 
-                <!-- <div class="share_wf mt-30">
-                  <p>Chia sẻ ngay</p>
-                  <div class="_icon">
-                    <a class="btn btn-primary">
-                        <i class="fab fa-facebook-f" aria-hidden="true"></i>
-                    </a>
-                    <a class="btn btn-danger">
-                        <i class="fab fa-google-plus-g" aria-hidden="true"></i>
-                    </a>
-                  </div>
-                </div> -->
               </div>
             </div>
           </div>
@@ -127,7 +68,6 @@
 
   <div class="karl-projects-menu mb-100">
     <div class="text-center portfolio-menu">
-      <!-- <button class="btn active" data-filter="*">Tất Cả</button>` -->
       <span class="" *ngFor="let loaigiay of _loaiGiayArray">
         <button class="btn" data-filter="" (click)="getProductByCate(loaigiay.tenLoai)">{{loaigiay.tenLoai}}</button>
       </span>
@@ -138,24 +78,29 @@
   <div class="container">
     <div class="row karl-new-arrivals">
       <div *ngFor="let pro of _productArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
-        <div class="product-img" (click)="getDetailModal(pro)">
-          <img src="{{pro.hinh}}" alt="">
-          <div class="product-quicview">
-            <a href="#" data-toggle="modal" data-target="#quickview">
-              <i class="ti-plus"></i>
-            </a>
+
+        <div class="card">
+          <div class="product-img" (click)="getDetailModal(pro)">
+            <img src="{{pro.hinh}}" alt="">
+            <div class="product-quicview">
+              <a href="#" data-toggle="modal" data-target="#quickview">
+                <i class="ti-plus"></i>
+              </a>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="product-description">
+              <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
+              <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
+              <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
+            </div>
+          </div>
+          <div class="sale">
+            <span>-{{pro.chietKhau * 100 | number: '1.0'}}%</span>
           </div>
         </div>
-        <div class="product-description">
-          <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
-          <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
-          <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
-          <!-- <a class="add-to-cart-btn" (click)="addCart(pro.id)" >Thêm vào giỏ hàng</a> -->
-        </div>
 
-        <div class="sale">
-          <span>-{{pro.chietKhau * 100 | number: '1.0'}}%</span>
-        </div>
+
 
       </div>
     </div>
