--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
@@ -31,14 +31,14 @@
         </mat-form-field>
       </div>
 
-      <div class="gender">
+      <!-- <div class="gender">
         <label class="lblName">Giới tính</label>
         <mat-radio-group class="example-radio-group" [(ngModel)]="favoriteSeason">
           <mat-radio-button class="example-radio-button" *ngFor="let season of seasons" [value]="season">
             {{season}}
           </mat-radio-button>
         </mat-radio-group>
-      </div>
+      </div> -->
 
       <div class="button-row">
         <button mat-raised-button color="primary" class="btnLogin">Cập nhật</button>
